// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ChannelDetails/> spec handles a non-existing channel 1`] = `
<div>
  <div
    class="euiFlexGroup euiFlexGroup--gutterMedium euiFlexGroup--alignItemsCenter euiFlexGroup--directionRow euiFlexGroup--responsive"
    style="padding: 0px 8px 0px 0px;"
  >
    <div
      class="euiFlexItem euiFlexItem--flexGrowZero"
    >
      <div
        class="euiFlexGroup euiFlexGroup--gutterMedium euiFlexGroup--alignItemsCenter euiFlexGroup--directionRow euiFlexGroup--responsive"
      >
        <div
          class="euiFlexItem euiFlexItem--flexGrowZero"
        >
          <div
            class="euiText euiText--small"
          >
            <h1>
              -
            </h1>
          </div>
        </div>
        <div
          class="euiFlexItem euiFlexItem--flexGrowZero"
          style="padding-top: 5px;"
        />
      </div>
    </div>
    <div
      class="euiFlexGroup euiFlexGroup--gutterSmall euiFlexGroup--alignItemsCenter euiFlexGroup--directionRow euiFlexGroup--responsive"
    >
      <div
        class="euiFlexItem"
      />
      <div
        class="euiFlexItem euiFlexItem--flexGrowZero"
      />
      <div
        class="euiFlexItem euiFlexItem--flexGrowZero"
      />
    </div>
  </div>
  <div
    class="euiSpacer euiSpacer--l"
  />
  <div
    class="euiPanel euiPanel--paddingMedium euiPanel--borderRadiusMedium euiPanel--plain euiPanel--hasShadow"
  >
    <div
      class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--alignItemsCenter euiFlexGroup--justifyContentSpaceBetween euiFlexGroup--directionRow euiFlexGroup--responsive"
      style="padding: 0px 0px;"
    >
      <div
        class="euiFlexItem"
      >
        <h2
          class="euiTitle euiTitle--small"
        >
          Name and description
        </h2>
      </div>
    </div>
    <hr
      class="euiHorizontalRule euiHorizontalRule--full euiHorizontalRule--marginSmall"
    />
    <div
      style="padding: initial;"
    >
      <div>
        <div
          class="euiSpacer euiSpacer--s"
        />
        <div
          class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--directionRow euiFlexGroup--responsive"
        >
          <div
            class="euiFlexItem"
          >
            <dl
              class="euiDescriptionList euiDescriptionList--row"
              style="word-break: break-word; white-space: pre-line;"
            >
              <dt
                class="euiDescriptionList__title"
              >
                Channel name
              </dt>
              <dd
                class="euiDescriptionList__description"
              >
                -
              </dd>
            </dl>
          </div>
          <div
            class="euiFlexItem"
          >
            <dl
              class="euiDescriptionList euiDescriptionList--row"
              style="word-break: break-word; white-space: pre-line;"
            >
              <dt
                class="euiDescriptionList__title"
              >
                Description
              </dt>
              <dd
                class="euiDescriptionList__description"
              >
                -
              </dd>
            </dl>
          </div>
          <div
            class="euiFlexItem"
          >
            <dl
              class="euiDescriptionList euiDescriptionList--row"
              style="word-break: break-word; white-space: pre-line;"
            >
              <dt
                class="euiDescriptionList__title"
              >
                Last updated
              </dt>
              <dd
                class="euiDescriptionList__description"
              >
                -
              </dd>
            </dl>
          </div>
        </div>
        <div
          class="euiSpacer euiSpacer--m"
        />
      </div>
    </div>
  </div>
  <div
    class="euiSpacer euiSpacer--l"
  />
  <div
    class="euiPanel euiPanel--paddingMedium euiPanel--borderRadiusMedium euiPanel--plain euiPanel--hasShadow"
  >
    <div
      class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--alignItemsCenter euiFlexGroup--justifyContentSpaceBetween euiFlexGroup--directionRow euiFlexGroup--responsive"
      style="padding: 0px 0px;"
    >
      <div
        class="euiFlexItem"
      >
        <h2
          class="euiTitle euiTitle--small"
        >
          Configurations
        </h2>
      </div>
    </div>
    <hr
      class="euiHorizontalRule euiHorizontalRule--full euiHorizontalRule--marginSmall"
    />
    <div
      style="padding: initial;"
    />
  </div>
</div>
`;

exports[`<ChannelDetails/> spec renders a specific channel 1`] = `
<div>
  <div
    class="euiFlexGroup euiFlexGroup--gutterMedium euiFlexGroup--alignItemsCenter euiFlexGroup--directionRow euiFlexGroup--responsive"
    style="padding: 0px 8px 0px 0px;"
  >
    <div
      class="euiFlexItem euiFlexItem--flexGrowZero"
    >
      <div
        class="euiFlexGroup euiFlexGroup--gutterMedium euiFlexGroup--alignItemsCenter euiFlexGroup--directionRow euiFlexGroup--responsive"
      >
        <div
          class="euiFlexItem euiFlexItem--flexGrowZero"
        >
          <div
            class="euiText euiText--small"
          >
            <h1>
              -
            </h1>
          </div>
        </div>
        <div
          class="euiFlexItem euiFlexItem--flexGrowZero"
          style="padding-top: 5px;"
        />
      </div>
    </div>
    <div
      class="euiFlexGroup euiFlexGroup--gutterSmall euiFlexGroup--alignItemsCenter euiFlexGroup--directionRow euiFlexGroup--responsive"
    >
      <div
        class="euiFlexItem"
      />
      <div
        class="euiFlexItem euiFlexItem--flexGrowZero"
      />
      <div
        class="euiFlexItem euiFlexItem--flexGrowZero"
      />
    </div>
  </div>
  <div
    class="euiSpacer euiSpacer--l"
  />
  <div
    class="euiPanel euiPanel--paddingMedium euiPanel--borderRadiusMedium euiPanel--plain euiPanel--hasShadow"
  >
    <div
      class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--alignItemsCenter euiFlexGroup--justifyContentSpaceBetween euiFlexGroup--directionRow euiFlexGroup--responsive"
      style="padding: 0px 0px;"
    >
      <div
        class="euiFlexItem"
      >
        <h2
          class="euiTitle euiTitle--small"
        >
          Name and description
        </h2>
      </div>
    </div>
    <hr
      class="euiHorizontalRule euiHorizontalRule--full euiHorizontalRule--marginSmall"
    />
    <div
      style="padding: initial;"
    >
      <div>
        <div
          class="euiSpacer euiSpacer--s"
        />
        <div
          class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--directionRow euiFlexGroup--responsive"
        >
          <div
            class="euiFlexItem"
          >
            <dl
              class="euiDescriptionList euiDescriptionList--row"
              style="word-break: break-word; white-space: pre-line;"
            >
              <dt
                class="euiDescriptionList__title"
              >
                Channel name
              </dt>
              <dd
                class="euiDescriptionList__description"
              >
                -
              </dd>
            </dl>
          </div>
          <div
            class="euiFlexItem"
          >
            <dl
              class="euiDescriptionList euiDescriptionList--row"
              style="word-break: break-word; white-space: pre-line;"
            >
              <dt
                class="euiDescriptionList__title"
              >
                Description
              </dt>
              <dd
                class="euiDescriptionList__description"
              >
                -
              </dd>
            </dl>
          </div>
          <div
            class="euiFlexItem"
          >
            <dl
              class="euiDescriptionList euiDescriptionList--row"
              style="word-break: break-word; white-space: pre-line;"
            >
              <dt
                class="euiDescriptionList__title"
              >
                Last updated
              </dt>
              <dd
                class="euiDescriptionList__description"
              >
                -
              </dd>
            </dl>
          </div>
        </div>
        <div
          class="euiSpacer euiSpacer--m"
        />
      </div>
    </div>
  </div>
  <div
    class="euiSpacer euiSpacer--l"
  />
  <div
    class="euiPanel euiPanel--paddingMedium euiPanel--borderRadiusMedium euiPanel--plain euiPanel--hasShadow"
  >
    <div
      class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--alignItemsCenter euiFlexGroup--justifyContentSpaceBetween euiFlexGroup--directionRow euiFlexGroup--responsive"
      style="padding: 0px 0px;"
    >
      <div
        class="euiFlexItem"
      >
        <h2
          class="euiTitle euiTitle--small"
        >
          Configurations
        </h2>
      </div>
    </div>
    <hr
      class="euiHorizontalRule euiHorizontalRule--full euiHorizontalRule--marginSmall"
    />
    <div
      style="padding: initial;"
    />
  </div>
</div>
`;

exports[`<ChannelDetails/> spec renders the component 1`] = `
<div
  class="euiFlexGroup euiFlexGroup--gutterMedium euiFlexGroup--alignItemsCenter euiFlexGroup--directionRow euiFlexGroup--responsive"
  style="padding: 0px 8px 0px 0px;"
>
  <div
    class="euiFlexItem euiFlexItem--flexGrowZero"
  >
    <div
      class="euiFlexGroup euiFlexGroup--gutterMedium euiFlexGroup--alignItemsCenter euiFlexGroup--directionRow euiFlexGroup--responsive"
    >
      <div
        class="euiFlexItem euiFlexItem--flexGrowZero"
      >
        <div
          class="euiText euiText--small"
        >
          <h1>
            -
          </h1>
        </div>
      </div>
      <div
        class="euiFlexItem euiFlexItem--flexGrowZero"
        style="padding-top: 5px;"
      />
    </div>
  </div>
  <div
    class="euiFlexGroup euiFlexGroup--gutterSmall euiFlexGroup--alignItemsCenter euiFlexGroup--directionRow euiFlexGroup--responsive"
  >
    <div
      class="euiFlexItem"
    />
    <div
      class="euiFlexItem euiFlexItem--flexGrowZero"
    />
    <div
      class="euiFlexItem euiFlexItem--flexGrowZero"
    />
  </div>
</div>
`;
